--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="부수를 비롯한 여러 한자를 배울 수 있는 한자 게임입니다"
-    />
-    <link rel="stylesheet" href="style.css">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7505788794028862"
-     crossorigin="anonymous"></script>
-  </head>
-  <body>
-    <noscript>이 페이지를 실행하려면 자바스크립트가 필요합니다! 설정에서 자바스크립트 사용 허용을 켜놓았는지 확인해주세요!</noscript>
-    <div id="root"></div>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="부수를 비롯한 여러 한자를 배울 수 있는 한자 게임입니다" />
+  <link rel="stylesheet" href="style.css">
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-RNN8H7ZB25"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-RNN8H7ZB25');
+  </script>
+</head>
+
+<body>
+  <noscript>이 페이지를 실행하려면 자바스크립트가 필요합니다! 설정에서 자바스크립트 사용 허용을 켜놓았는지 확인해주세요!</noscript>
+  <div id="root"></div>
+</body>
+
 </html>
